--- a/contato.html
+++ b/contato.html
@@ -7,6 +7,7 @@
     <title>Contato</title>
 </head>
 <body>
-    
+    <h1>Contato</h1>
+    <p>Entre em contat pelo email exemplo@exemplo.com</p>
 </body>
 </html>
