--- a/contato.html
+++ b/contato.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Contato</h1>
-    <p>Entre em contat pelo email exemplo@exemplo.com</p>
+    <p>Entre em contato pelo email exemplo@exemplo.com</p>
 </body>
 </html>
